<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:clipToPadding="false"
    android:id="@+id/scroll"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/spacing_medium"
    android:paddingRight="@dimen/spacing_medium"
    android:paddingTop="@dimen/spacing_xlarge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/your_name"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="12sp" />

        <EditText
            android:inputType="text"
            android:id="@+id/your_name"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/your_email"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/your_email"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/your_comment"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_comment"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:height="180dp"
            android:gravity="top"
            android:textSize="14sp" />

        <Button
            android:id="@+id/post_comment"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="right"
            android:background="@drawable/btn_bordered"
            android:paddingBottom="1dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="1dp"
            android:text="@string/post_comment"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="13sp"/>

    </LinearLayout>
</ScrollView>